<resources>
    <string name="app_name">Medicine</string>

    <!-- Strings related to login -->
    <string name="prompt_login">Login</string>
    <string name="error">Check the login and password for correctness</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_login">This login is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="all_medicine">All medicine</string>
    <string name="add_medicine">Add medicine</string>
    <string name="name_medicine">Name medicine</string>
    <string name="note">Note</string>
    <string name="arrival_date">Arrival date</string>
    <string name="amount">Amount</string>
    <string name="date_manufacture">Date of Manufacture</string>
    <string name="shelf_life">Shelf life</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="code_country">Code country</string>
    <string name="code_phone">Code phone</string>
    <string name="adding">Adding medicines to shop</string>
    <string name="adress">Adress</string>
    <string name="price_one">Price one</string>
    <string name="departure_date">Departure date</string>
    <string name="form_registration">Form registration</string>
    <string name="check_in">Check in</string>
    <string name="postal_adress">Postal address</string>
    <string name="phone">Phone</string>
    <string name="email">E-mail</string>
    <string name="your_name">Your name</string>
    <string name="order">Order</string>
    <string name="find_medicine">Find medicine</string>
    <string name="search">Search</string>
    <string name="restore">Restore password</string>
    <string name="delete">Delete</string>
    <string name="out_all">Out all medicine</string>
    <string name="enter_name_tablets">Enter the name of the tablets</string>
    <string name="name_shop">Name shop</string>
    <string name="LangDialogTitle">Choose language:</string>
    <string name="LangTitle">Language</string>
    <string name="LangSummary">Language application</string>
    <string name="Setting">Setting</string>
    <string name="Restart">Restart</string>
    <string name="lotNumber">Lot number</string>
    <string name="toastAdd">Medicine add successful.</string>
    <string name="surname">Surname</string>
    <string name="patronymic">Patronymic</string>
    <string name="user_add">User add successful.</string>
    <string name="edit">Edit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="basket">Shopping cart</string>
    <string name="update_button">Update</string>
    <string-array name="entryvalues_lang">
        <item>default</item>
        <item>ru</item>
        <item>en</item>
    </string-array>
    <string-array name="entries_lang">
        <item>Язык аппарата</item>
        <item>Русский</item>
        <item>Английский</item>
    </string-array>

</resources>
