<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/back_login"
    android:orientation="vertical"
    android:padding="40dp"
    android:weightSum="1">

    <android.support.v7.widget.CardView
        android:layout_width="332dp"
        android:layout_height="476dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/back_login4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/form_registration"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:text="@string/form_registration"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/login_checkIN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="@mipmap/username"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="Username"
                android:inputType="textPersonName"
                android:paddingLeft="0dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/password_client"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="@mipmap/lock"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:paddingLeft="0dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/surname_client"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="@mipmap/signup"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/surname"
                android:paddingLeft="0dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/name_client"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="0.26"
                android:drawableLeft="@mipmap/name"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/your_name"
                android:paddingLeft="0dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/patronymic_client"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="0.36"
                android:drawableLeft="@mipmap/patronymic"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/patronymic"
                android:paddingLeft="0dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <Button
                android:id="@+id/check_in_button_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/selector_xml_btn_yellow"
                android:text="Check in" />

        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>
