<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/drawer_layout"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/light_yellow"
    tools:context="com.example.andy.accountingandcancellationofmedicines.StartPageActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:id="@+id/scrollView"
        android:layout_gravity="right"
        android:background="@color/light_yellow"
        android:layout_weight="0.95"
        android:layout_above="@+id/relativeLayout"
        android:layout_below="@+id/relativeLayout2">

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listViewMedicine"
            android:textStyle="bold|italic"
            android:layout_alignParentStart="true"
            android:choiceMode="multipleChoice" />
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/relativeLayout2"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_height="80dp">

        <Spinner
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerCountry"
            android:background="@android:drawable/spinner_dropdown_background"
            android:textAlignment="center"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/editTextSearchMedicine" />

        <EditText
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:id="@+id/editTextSearchMedicine"
            android:textStyle="bold|italic"
            android:hint="@string/enter_name_tablets"
            style="@style/Widget.AppCompat.EditText"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true" />

        <Spinner
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerDistrict"
            android:layout_gravity="right"
            android:textStyle="normal|bold|italic"
            android:background="@android:drawable/spinner_dropdown_background"
            style="@style/Widget.AppCompat.Light.Spinner.DropDown.ActionBar"
            android:textAlignment="center"
            android:soundEffectsEnabled="true"
            android:clickable="false"
            android:splitMotionEvents="false"
            android:layout_alignBottom="@+id/editTextSearchMedicine"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/editTextSearchMedicine" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:id="@+id/relativeLayout"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textStyle="bold|italic"
            android:text="@string/add_medicine"
            android:id="@+id/buttonAdd"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:textColor="@color/white"/>

        <Button
            android:layout_height="wrap_content"
            android:textStyle="bold|italic"
            android:text="@string/out_all"
            android:id="@+id/buttonOut"
            android:textColor="@color/white"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_width="150dp" />

    </RelativeLayout>

</RelativeLayout>
