<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_client"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/light_yellow"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.andy.accountingandcancellationofmedicines.views.implementation.ClientActivity"
    tools:showIn="@layout/app_bar_client">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:background="@color/light_yellow"
        android:weightSum="1"
        android:layout_alignParentEnd="true"
        android:id="@+id/linearLayout">

        <EditText
            android:layout_height="62dp"
            android:id="@+id/find_client_medicine"
            android:hint="@string/find_medicine"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/client_city"
            android:layout_width="142dp"
            android:inputType="text"
            style="@android:style/Widget.DeviceDefault.EditText"
            android:layout_alignParentTop="true"
            android:textColorHighlight="@color/yellow"
            android:textCursorDrawable="?attr/editTextBackground" />

        <Spinner
            android:id="@+id/client_city"
            android:textStyle="bold|italic"
            android:layout_alignStart="@+id/client_district"
            android:layout_above="@+id/client_district"
            android:layout_toStartOf="@+id/SearchButton"
            android:layout_width="92dp"
            android:background="@android:drawable/spinner_dropdown_background"
            android:layout_weight="0.32"
            android:layout_height="40dp" />

        <Spinner
            android:id="@+id/client_district"
            android:spinnerMode="dropdown"
            android:textStyle="bold|italic"
            android:layout_alignParentTop="true"
            android:layout_alignEnd="@+id/linearLayout2"
            android:background="@android:drawable/spinner_dropdown_background"
            android:layout_width="100dp"
            android:layout_weight="0.28"
            android:layout_height="40dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:weightSum="1"
        android:background="@color/light_yellow"
        android:layout_weight="2.50"
        android:layout_alignParentEnd="true"
        android:layout_height="400dp"
        android:layout_below="@+id/linearLayout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textStyle="bold|italic"
            android:id="@+id/SearchButton"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:layout_above="@+id/listMedicineClient"
            android:layout_marginBottom="18dp" />

        <ListView
            android:layout_width="match_parent"
            android:id="@+id/listMedicineClient"
            android:textStyle="bold|italic"
            android:choiceMode="singleChoice"
            tools:listitem="@android:layout/simple_list_item_checked"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_height="262dp"
            android:layout_weight="0.63" />

        <Button
            android:layout_width="99dp"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:textStyle="bold|italic"
            android:id="@+id/OrderButton"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:layout_gravity="center"/>
    </LinearLayout>

</RelativeLayout>
